--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-Django==2.0.2
+Django==1.10.8
 django-crispy-forms==1.7.0
+django-haystack==2.6.1
+elasticsearch==6.1.1
 pytz==2017.3
+urllib3==1.22
